# msget

./: README.md  login_post_data.json.example  msget.ini.example  msget_processing_function.py.example  pyproject.toml
msget/: msget.py
tests/: test_msget.py
