[tool.poetry]
name = "msget"
version = "1.1.0"
description = "Get Moodle stats. Archive and share them by email."
authors = ["Matteo Savatteri <matteo.savatteri@unimi.it>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
msget = "msget.msget:main"

